prevent the content from jumping to the left when the scroll bar finally displays

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 body, html {
-	height: 100%;
+	height: 108%;
 }
 
 .centered { vertical-align:middle; text-align:center; }
